# wattz

./: .env.example  .gitignore  Cargo.toml  Dockerfile.gateway  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json
.github/workflows/: ci.yml
apps/operator/: README.md  next.config.mjs  package.json  tailwind.config.ts
apps/operator/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/operator/src/app/models/: page.tsx
apps/operator/src/app/rewards/: page.tsx
apps/operator/src/app/stake/: page.tsx
apps/operator/src/components/: ErrorPanel.tsx  ModelChip.tsx  NodeCard.tsx  RevenueChart.tsx  StatCard.tsx  ThroughputChart.tsx  UptimeChart.tsx
apps/operator/src/components/layout/: BackgroundMusic.tsx  Footer.tsx  Header.tsx  (+1 more)
apps/operator/src/lib/: api.ts  baseline.ts  constants.ts  env.ts  format.ts
apps/operator/src/providers/: QueryProvider.tsx  WalletProvider.tsx
apps/operator/src/types/: wattz.ts
apps/web/: .env.local.example  .gitignore  next.config.mjs  package.json  tailwind.config.ts
apps/web/src/: middleware.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/lib/: api.ts  extractVideoId.ts  flags.ts  format.ts  palette.ts  solana.ts
apps/web/src/providers/: Providers.tsx  QueryProvider.tsx  WalletProvider.tsx
docs/: architecture.md  benchmarks.md  inference-spec.md  security.md  tee-attestation.md
scripts/: bench.sh  verify-no-placeholder.sh  verify-secret-leak.sh  verify-tone.sh
(+49 files in other folders)
