[workspace]
members = [
    "packages/inference-gateway",
    "packages/node-runtime",
    "packages/compute-verifier",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Wattz Contributors"]
repository = "https://github.com/wattz-compute/wattz"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures = "0.3"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
bs58 = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
prometheus = "0.13"
metrics = "0.23"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
